  * Make it possible for frontend modules to chain onto the install
    Makefile rule
  * Rename some convenience functions in newt.c and unstaticify them, as
    they are quite convenient when writing plugins.
  * Install a useful set of headers so it's actually possible to build
    plugins outside the cdebconf tree.

  [ Christian Perrier ]
  * Add comments for translators in templates

 -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun, 25 Dec 2005 18:24:04 +0100

cdebconf (0.91) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Fixed some memory leaks in GTK frontend.
  * If no default option(s) in SELECT and MULTISELECT is specified the first
    row gets selected by default.
  * Updated TODO doc file to reflect GTK frontend's staus.
  * Removed old and no longer needed lines of code.

  [ Frans Pop ]
  * libgtk+2.0-directfb-dev takes proper care of dependencies now.
  * Remove Standards-Version:, not applicable to udebs.

 -- Frans Pop <fjp@debian.org>  Mon,  7 Nov 2005 15:38:17 +0100

cdebconf (0.90) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Display short description above long description for notes and errors.
  * Skip description of questions during TAB navigation.
  * Improved packaging for multiple questions.
  * Fixed progress bar resume after interruption by question.

  [ Frans Pop ]
  * Make build dependency on gtk+2.0-directfb versioned.

 -- Frans Pop <fjp@debian.org>  Fri,  4 Nov 2005 17:41:42 +0100

cdebconf (0.89) unstable; urgency=low

  * Add dependency on libgtk2.0-dev back in.

 -- Frans Pop <fjp@debian.org>  Fri,  4 Nov 2005 00:42:06 +0100

cdebconf (0.88) unstable; urgency=low

  [ Colin Watson ]
  * Remove hardcoded limit on length of DATA commands.

  [ Attilio Fiandrotti ]
  * Added a new handler for SELECT question that are better displayed by
    a tree rather than a list. Added a nice logo. Closes: #322376.
  * Some changes to GTK frontend aspect to make it more NEWT-like and
    many improvements to usability too.