@@ -27,6 +27,10 @@ cdebconf (0.92) UNRELEASED; urgency=low
   [ Christian Perrier ]
   * Add comments for translators in templates
 
+  [ Colin Watson ]
+  * Make DEBCONF_DEBUG=. be equivalent to DEBCONF_DEBUG=20, to make it
+    easier to debug cdebconf and debconf simultaneously.
+
  -- Attilio Fiandrotti <fiandro@tiscali.it>  Sun, 25 Dec 2005 18:24:04 +0100
 
 cdebconf (0.91) unstable; urgency=low
